deps/v8/test/message/fail/missing-function-name.out
*%(basename)s:5: SyntaxError: Function statements require a function name
function (){}
^^^^^^^^
SyntaxError: Function statements require a function name
